--- a/data/view/web/dev/groups.html
+++ b/data/view/web/dev/groups.html
@@ -89,9 +89,9 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">主机名：</label>
+                    <label class="col-sm-3 col-form-label">组标识：</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" placeholder="请输入" value="" name="host">
+                        <input type="text" class="form-control" placeholder="请输入" value="" name="tag">
                     </div>
                 </div>
                 <div class="form-group row">
@@ -181,7 +181,7 @@
             {name: "exhibit", type: "number", width: 30, align: "left", title: "展厅", visible: false},
             {name: "number", type: "number", width: 50, align: "center", title: "序号"},
             {name: "name", type: "text", width: 160, align: "center", title: "组名称"},
-            {name: "host", type: "number", width: 50, align: "center", title: "主机名"},
+            {name: "tag", type: "number", width: 50, align: "center", title: "组标识"},
             {name: "delay_start", type: "number", width: 50, align: "center", title: "开延迟", visible: false},
             {name: "delay_end", type: "number", width: 50, align: "center", title: "关延迟", visible: false},
             {name: "display", type: "text", width: 80, align: "center", title: "隐藏0/显示1"},
