--- a/data/view/web/sign/register.html
+++ b/data/view/web/sign/register.html
@@ -25,7 +25,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
     <div class="login-logo">
-        <a href="#"><b>HCC</b><span style="font-size: 20px">后台</span></a>
+        <a href="#"><b>CCS</b><span style="font-size: 20px">后台</span></a>
     </div>
     <!-- /.login-logo -->
     <div class="card">
