--- a/data/view/templates/operateModal.html
+++ b/data/view/templates/operateModal.html
@@ -1,14 +1,15 @@
-{% macro addModal() %}
+{% macro addModal(width=0,minHeight=0) %}
     <div class="modal fade" id="addModal">
         <div class="modal-dialog">
-            <div class="modal-content">
+            <div class="modal-content" style="{{ 'width:{0}px'.format(width) if width >0 else '' }}">
                 <div class="modal-header">
                     <h4 class="modal-title">新增</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body" style="max-height:600px;overflow: auto">
+                <div class="modal-body"
+                     style="max-height:600px;overflow: auto;{{ 'min-height:{0}px'.format(minHeight) if minHeight >0 else '' }}">
                     {{ caller() }}
                 </div>
                 <div class="modal-footer justify-content-between">
@@ -26,17 +27,17 @@
     </button>
 {% endmacro %}
 
-{% macro updateModal() %}
+{% macro updateModal(width=0,minHeight=0) %}
     <div class="modal fade" id="updateModal">
         <div class="modal-dialog">
-            <div class="modal-content">
+            <div class="modal-content" style="{{ 'width:{0}px'.format(width) if width >0 else '' }}">
                 <div class="modal-header">
                     <h4 class="modal-title">修改</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body" style="max-height:600px;overflow: auto">
+                <div class="modal-body" style="max-height:600px;overflow: auto;{{ 'min-height:{0}px'.format(minHeight) if minHeight >0 else '' }}">
                     {{ caller() }}
                 </div>
                 <div class="modal-footer justify-content-between">
@@ -79,5 +80,33 @@
     </div>
     <button type="button" class="btn btn-danger" id="delModalBtn" data-toggle="modal" data-target="#delModal"
             style="display:none">删除
+    </button>
+{% endmacro %}
+
+{% macro linksModal(width=0,minHeight=0) %}
+    <div class="modal fade" id="linksModal">
+        <div class="modal-dialog">
+            <div class="modal-content" style="{{ 'width:{0}px'.format(width) if width >0 else '' }}">
+                <div class="modal-header">
+                    <h4 class="modal-title">关联</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" style="max-height:600px;overflow: auto;{{ 'min-height:{0}px'.format(minHeight) if minHeight >0 else '' }}">
+                    {{ caller() }}
+                </div>
+                <div class="modal-footer justify-content-between">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="linksOptClose">取消</button>
+                    <button type="button" class="btn btn-primary" id="linksOpt">保存</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <button type="button" class="btn btn-block btn-default btn-sm" id="linksModalBtn"
+            data-toggle="modal" data-target="#linksModal" style="display:none"><i class="fas fa-plus"></i>
+        关联
     </button>
 {% endmacro %}
