--- a/data/view/web/dev/lamp.html
+++ b/data/view/web/dev/lamp.html
@@ -94,6 +94,12 @@
                         <input type="text" class="form-control" placeholder="请输入" value="" name="name">
                     </div>
                 </div>
+                <div class="form-group row">
+                    <label class="col-sm-3 col-form-label">标识：</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" placeholder="请输入" value="" name="tag">
+                    </div>
+                </div>
                 <div class="form-group clearfix">
                     <label style="margin-right:55px">类型：</label>
                     <div class="icheck-primary d-inline">
@@ -102,7 +108,7 @@
                     </div>
                     <div class="icheck-primary d-inline">
                         <input type="radio" id="{{ prefix }}typeRadio2" name="type" value=1>
-                        <label for="{{ prefix }}typeRadio2">设备</label>
+                        <label for="{{ prefix }}typeRadio2">电</label>
                     </div>
                 </div>
                 <div class="form-group clearfix">
@@ -201,6 +207,7 @@
             {name: "name", type: "text", width: 160, align: "center", title: "名称"},
             {name: "type", type: "text", width: 80, align: "center", title: "灯光0/设备1"},
             {name: "display", type: "text", width: 80, align: "center", title: "隐藏0/显示1"},
+            {name: "tag", type: "text", width: 50, align: "center", title: "标识", visible: false},
             {name: "delay_start", type: "number", width: 50, align: "center", title: "开延迟", visible: false},
             {name: "delay_end", type: "number", width: 50, align: "center", title: "关延迟", visible: false},
             {name: "style", type: "text", width: 50, align: "center", title: "样式", visible: false},
